--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,12 @@
                     <a href="portfolio.html#growth">GROWTH</a>
                 </li>
                 <li>
-                    <a href="indexEN.html">CV</a>
+                    <a href="portfolio.html#projects">PROJECTS</a>
                 </li>
             </ul>
         </div>
         <div class="nav-right">
+            <a href="indexEN.html" class="switch-button">CV</a>
             <a href="indexEN.html#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
@@ -412,83 +413,126 @@
             <p class="emphasize5 bold">Questions: </p>
             <ol>
                 <li>Where am I at currently?</li>
-                <li>What am I doing well already?</li>
+                <li>What am I already doing well?</li>
                 <li>What am I still unable to do?</li>
             </ol>
             <br>
             <div class="position">
-                <div class="position-roles">
-                    <p class="bold">
+                <div class="position-roles white-rounded-background">
+                    <p class="bold role-title">
                         Designer:
                     </p>
                     <p>
-                        1.
+                        <span class="emphasize5 bold">1.</span> I've grown adequately as a designer. I'm able to create a project plan and I am aware of the necessary tools and programming languages that are needed for its realisation.
                     </p>
                     <p>
-                        2.
+                        <span class="emphasize5 bold">2.</span> I can correspond to other people as to how the project might be approached. I can set up a chronological plan to reach a certain goal/result. I can design basic UI/UX designs using my own user experience.
                     </p>
                     <p>
-                        3.
+                        <span class="emphasize5 bold">3.</span> I have not been exposed to sophisticated frameworks and libraries that allow me to work more efficiently. I spend more time at certain roadblocks within a project than necessary.
+                    </p>
+                    <p class="emphasize5 bold">
+                        Activities that I was able to perform or observe:
+                    </p>
+                    <p>
+                        <span class="bold">Research and Discovery:</span> I have researched different portfolio websites and Mastermind games to see what I like, what works and what doesn't. I've used my personal experience to determine which aspects I'd like to introduce in my own projects.<br><br>
+                        <span class="bold">Ideation and Conceptualisation: </span> I've created a plan for a personal website, as well as for a Mastermind game. Starting with writing down what's required and drawing out what it's supposed to look like. This helps to create a clear step-by-step process to achieve the best result.<br><br>
+                        <span class="bold">Branding and Aesthetic Design:</span> In both my CV website as my Portfolio side of this project, I've chosen a specific style that fits both concepts. This branding is used to create a uniform experience in both pages. Fonts, colors, images and details are all meticulously chosen.
                     </p>
                 </div>
-                <div class="position-roles">
-                    <p class="bold">
+                <div class="position-roles white-rounded-background">
+                    <p class="bold role-title">
                         Programmer:
                     </p>
                     <p>
-                        1.
+                        <span class="emphasize5 bold">1.</span> I've spent a fair amount of time, before the start of my formal education, self-learning programming. I've worked with a few data structures and logical algorithms. I also am able to apply set coding conventions.
                     </p>
                     <p>
-                        2.
+                        <span class="emphasize5 bold">2.</span> Since the start of this education, I've been learning how to program in C#. This is something that enables me to create more dynamic programs compared to the basic websites or console applications I used to program in the past.
                     </p>
                     <p>
-                        3.
+                        <span class="emphasize5 bold">3.</span> I still have a lot of time left to spent with C# to fully unlock my potential as a programmer. In addition to this I am also still left to be exposed to a whole array of frameworks and libraries that allow for more efficient code and therefore more scalable and useful projects.
+                    </p>
+                    <p class="emphasize5 bold">
+                        Activities that I was able to perform or observe:
+                    </p>
+                    <p>
+                        <span class="bold">Coding and Development:</span> So far I've coded a CV website, a portfolio page and a Mastermind game. These projects required different tools and languages. I've managed to develop each project as its own entity, using code that's well-readable and adaptable when required.<br><br>
+                        <span class="bold">Debugging and Troubleshooting:</span> As a programmer, it's unthinkable to develop software without running into certain bugs. It's a skill for a programmer to be able to identify these bugs and solve them correctly. I've encountered my fair share of bugs while developing my projects and I've learned to use the debugging and troubleshooting tools to be able to fix these issues.<br><br>
+                        <span class="bold">Continuous Learning and Optimisation:</span> It never happens that a program of certain size is written overnight. When spending more time with a project, certain aspects are changed or rearranged. I've learned to refactor variables, methods and functions to make more sense within the program and allow for better readability. When new features are implemented, it's important that other parts of the program are adapted to allow for a better optimisation. For example, in the sprint-based project of the Mastermind game, it was important to implement these aspects.
                     </p>
                 </div>
-                <div class="position-roles">
-                    <p class="bold">
+                <div class="position-roles white-rounded-background">
+                    <p class="bold role-title">
                         Tester:
                     </p>
                     <p>
-                        1.
+                        <span class="emphasize5 bold">1.</span> During this formal education I've been given certain pieces of code with their own issues and errors. I was required to fix these bugs to get the program to do what it was expected to.
                     </p>
                     <p>
-                        2.
+                        <span class="emphasize5 bold">2.</span> I am able to detect certain bugs, some even by just looking at the code without running it yet.
                     </p>
                     <p>
-                        3.
+                        <span class="emphasize5 bold">3.</span> It's not easy to fix a certain bug and already be aware of any other bugs this fix can cause. Sometimes I might plan in more testing moments to prevent having to test "bigger" parts of a project at once.
+                    </p>
+                    <p class="emphasize5 bold">
+                        Activities that I was able to perform or observe:
+                    </p>
+                    <p>
+                        <span class="bold">Test Execution:</span> No program ever gets released without testing. Better yet, it's important to test the project frequently so issues can be handled before they snowball into much bigger ones. I've learned to test my projects, both the web project as the C# project, to dodge further pitfalls and more work down the line.<br><br>
+                        <span class="bold">Test Planning:</span> I've created a plan within my Mastermind Project at which stages of development I wish to test my program. Implementation of bigger features required more frequent testing.<br><br>
+                        <span class="bold">Test Design:</span> I haven't yet created test designs but in the future I'm sure I will have to. These designs are meant to simulate real world scenarios in which the program has to be able to perform.
                     </p>
                 </div>
-                <div class="position-roles">
-                    <p class="bold">
+                <div class="position-roles white-rounded-background">
+                    <p class="bold role-title">
                         Communicator / Team-player:
                     </p>
                     <p>
-                        1.
+                        <span class="emphasize5 bold">1.</span> I've had past work experiences where I was responsible for the planning and execution of this plan with a team.
                     </p>
                     <p>
-                        2.
+                        <span class="emphasize5 bold">2.</span> I'm able to communicate a plan to a team, and I am able to oversee how the team applies a set plan.
                     </p>
                     <p>
-                        3.
+                        <span class="emphasize5 bold">3.</span> I haven't yet created a project, nor a plan, in an IT setting. This is something I'm yet to do.
+                    </p>
+                    <p class="emphasize5 bold">
+                        Activities that I was able to perform or observe:
+                    </p>
+                    <p>
+                        <span class="bold">Active Listening:</span> I am capable of listening to a lead on how to approach a project. I'm also able to give input when asked or required. All this while remaining respectful and empathetic towards the other members of the team. I haven't yet done this in an IT context, but I'm sure this will be of use in my second semester, where we are supposed to work on a project in teams.<br><br>
+                        <span class="bold">Encouraging Collaboration:</span> I am a social being that enjoys working with a team or within a community aspiring to reach a common goal. I also like to motivate people to reach their full potential. This I also haven't done yet, but just like the example above, I will be doing this next semester.<br><br>
+                        <span class="bold">Effective Meeting Management:</span> In my past work experience I was required to set up meetings and have these run smoothly. It's of great importance that most, if not all, bullet points are handled and a concise report is written. This allows for a better work flow and enables every member of the team to know what's expected of them.
                     </p>
                 </div>
-                <div class="position-roles">
-                    <p class="bold">
+                <div class="position-roles white-rounded-background">
+                    <p class="bold role-title">
                         Lifelong learning IT professional:
                     </p>
                     <p>
-                        1.
+                        <span class="emphasize5 bold">1.</span> As stated above, I've started learning how to program before I started with a formal education. I've always like to learn new things and the field of IT allows me to keep doing this in a subject that interest me deeply.
                     </p>
                     <p>
-                        2.
+                        <span class="emphasize5 bold">2.</span> I am capable of learning new things fairly fast and thoroughly. This is something that allows me to learn complex aspects in the field of IT.
                     </p>
                     <p>
-                        3.
+                        <span class="emphasize5 bold">3.</span> I require an active interest or passion to be able to dedicate myself to deep learn something. I'd be nice if I could apply myself to subjects that are useful, albeit less interesting to me, with the same intensity.
+                    </p>
+                    <p class="emphasize5 bold">
+                        Activities that I was able to perform or observe:
+                    </p>
+                    <p>
+                        <span class="bold">Staying Updated with Industry Trends:</span> I regularly follow industry blogs, forums, and publications to stay informed about emerging technologies. I'm subscribed to industry-leading resources such as Stack Overflow, Hacker News, and Reddit communities..<br><br>
+                        <span class="bold">Pursuing Continuous Education:</span> I love to keep learning. I apply myself to online courses for programming so I always stay up-to-date with new trends. My first introduction with programming was finishing Harvard's CS50x: Introduction to Computer Science. Since then I've done FreeCodeCamp, Codecademy and TheOdinProject. I still frequently browse through sites like Pluralsight and Udemy to find interesting courses.<br><br>
+                        <span class="bold">Practising Skills Regularly:</span> In my spare time I'm regularly coding, creating fun little projects or just honing my skills trying to reverse-engineer something someone else has created. The best way to get better in anything, is to do it consistently. That's the way I learned how to play guitar, sing, and how I learn to program.
                     </p>
                 </div>
             </div>
         </div>
+    </section>
+    <section id="projects" class="projects">
+        <h3>Projects</h3>
     </section>
 </main>
 </body>
