--- a/indexNL.html
+++ b/indexNL.html
@@ -32,12 +32,10 @@
                 <li>
                     <a href="#experience-section">ERVARINGEN</a>
                 </li>
-                <li>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                </li>
             </ul>
         </div>
         <div class="nav-right">
+            <a href="portfolio.html" class="switch-button">PORTFOLIO</a>
             <a href="#contact-section" class="contact-button">
                 <p>CONTACT</p>
             </a>
