Working on projects timeline.

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
             <a href="indexNL.html">
                 <img src="assets/images/netherlands-flag.png" alt="UK-flag">
             </a>
-            <a href="#top-of-page">Lorenzo</a><br>
+            <a href="#top-of-page">Lorenzo Latinne</a><br>
         </div>
         <div class="nav-middle">
             <ul>
@@ -533,6 +533,99 @@
     </section>
     <section id="projects" class="projects">
         <h3>Projects</h3>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                Scratch project - 30/09/2024
+            </p>
+            <div class="project-content">
+                <div class="project-image">
+                    <iframe src="https://scratch.mit.edu/projects/1068354812/embed" allowtransparency="true" width="485" height="402" allowfullscreen></iframe>
+                </div>
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The Scratch project was an introductory assignment during my Higher Diploma in Programming, where I had to create a Pong game. This task was a simple yet useful exercise to further develop logical reasoning and programming skills.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> Although the task provided clear instructions and confirmed my existing knowledge, I felt that the simplicity of the assignment left little room for creative solutions and personal growth, which at times was less motivating.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I confirmed that self-study is a powerful way to build knowledge and skills in the IT sector. Combining code blocks in Scratch gave me a proud moment and motivated me to take on more challenges. Lifelong learning is essential for my growth and ambition as a programmer.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                GIT task 1 - 07/10/2024
+            </p>
+            <div class="project-content">
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> This task was meant to teach us how Git works. How does a repository work in the cloud? How to get it to the local machine? How to work on it and update it back to the cloud? This is a day-to-day, if not hour-to-hour working routine I will be doing as an IT professional.<br> In this task, I was assigned to create a simple WPF application in which a user can click on a color, see its hex-code and the meaning of said color. The core assignment was being able to commit each feature and push it to the online repository.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> Because I always worked strictly locally when I was learning myself how to program, I never used Git. It's quite obvious that this is extremely important to understand and to master, since this is one of the minimal requirements any IT professional must have to be able to work in a team.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned that this is an extremely helpful tool, and one that does not necessarily only has to be used when working with a team. It's nice to be able to have your work progress saved in a cloud, so you can always pull it and work on it on any device. And if ever hardware decides to quit working, which we all know occasionally might happen, you still have all your work securely saved on GitHub or any other Git service.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="https://github.com/PXL-CSEssentials-2425/git-taak-1-groep-abc-LorenzoLatinnePXL" target="_blank">Link to the GitHub repo</a>
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="assets/images/howGitWorks.png" alt="How GIT works.">
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                POP: AIM-reflection Scratch project - 07/10/24
+            </p>
+            <div class="project-content">
+                <div class="project-image">
+                    <img src="assets/images/reflection.png" alt="Reflection image">
+                </div>
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task was a reflection assignment on my experience with the Scratch project. Rather than focusing on the technical execution of the task, the aim was to reflect on my learning process and personal development. I had to analyse my strengths and weaknesses, recognise my learning style, and improve my approach for future tasks.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> The simplicity of the task provided little room for creative growth, which made me realise that I often learn the most from more complex tasks. I also discovered that I sometimes set high expectations for myself and put too much pressure on myself. It was a challenge to set realistic goals and be patient.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned the importance of self-awareness and patience in my learning process. The realisation that I need to be patient with simpler tasks and value small wins became clear. I also recognised that I need more challenges to truly grow. This reflection helped me improve my future learning strategies.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="assets/pdfs/Latinne_Lorenzo_POPreflectieScratch.pdf" target="_blank">Link to the PDF-file</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                POP planning and organisation -  14/10/2024
+            </p>
+            <div class="project-content">
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task was to reflect on my weekly schedule, analysing how I balanced studying, relaxation, sports, and family time.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> The challenge was finding a balance between studying, relaxation, and social commitments. Days like Thursday and Friday were tough, with little time for rest, and I noticed that my schedule was sometimes too full, affecting my efficiency.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned the importance of maintaining a balance between work and relaxation. I want to make my schedule more flexible to ensure I can be productive while also getting enough rest.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="assets/pdfs/Latinne_Lorenzo_planning.pdf" target="_blank">Link to the PDF-file</a>
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="" alt="Reflection image">
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 </body>
