--- a/indexEN.html
+++ b/indexEN.html
@@ -16,7 +16,7 @@
             <a href="indexNL.html">
                 <img src="assets/images/netherlands-flag.png" alt="UK-flag">
             </a>
-            <a href="#top-of-page">Lorenzo</a>
+            <a href="#top-of-page">Lorenzo Latinne</a>
         </div>
         <div class="nav-middle">
             <ul>
