--- a/indexNL.html
+++ b/indexNL.html
@@ -16,7 +16,7 @@
             <a href="indexEN.html" class="lang-link-a">
                 <img src="assets/images/united-kingdom-flag.png" alt="UK-flag">
             </a>
-            <a href="#top-of-page">Lorenzo</a>
+            <a href="#top-of-page">Lorenzo Latinne</a>
         </div>
         <div class="nav-middle">
             <ul>
