--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,9 @@
                 <li>
                     <a href="portfolio.html#projects">PROJECTS</a>
                 </li>
+                <li>
+                    <a href="portfolio.html#reflection">REFLECTION</a>
+                </li>
             </ul>
         </div>
         <div class="nav-right">
@@ -622,11 +625,191 @@
                     </p>
                 </div>
                 <div class="project-image">
-                    <img src="" alt="Reflection image">
+                    <img src="assets/images/planning.png" alt="Planning image">
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                GIT task 2 - Web - 14/10/2024
+            </p>
+            <div class="project-content">
+                <div class="project-image">
+                    <img src="assets/images/web-project.png" alt="Web image">
+                </div>
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task was to replicate a web page based on specific requirements given in the "Project Requirements" session. For each requirement, a separate commit was made in my repository, with the corresponding ID (e.g., NAV-01) included in the commit message.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> A challenge was understanding how to properly use Flexbox to align the list items horizontally instead of vertically, as well as centring the elements in the three containers (left, middle, right). Additionally, styling the right container to match the design (e.g., making the borders rounded for an oval shape) was a bit tricky. Using CSS properties like position and z-index to layer the navigation over the video in the header also required some experimentation.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned how to use Flexbox to align elements horizontally and how to centre items within containers using Flexbox and CSS. Additionally, I gained a better understanding of using CSS properties like border-radius to create rounded corners and position/z-index for layout control. Overall, I improved my skills in layout structuring and styling to achieve a more polished result.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="https://github.com/PXL-WPL1-2425/git-pe-2-LorenzoLatinnePXL" target="_blank">Link to the GitHub repo</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                Career compass - 21/10/2024
+            </p>
+            <div class="project-content">
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task was to create a career compass. I had to complete the following steps:<br>1. What is my goal?<br>2. What skills do I need?<br>3. What skills do I already possess? Which do I still need?<br>4. What job or position could be a stepping stone?<br>5. What other steps can I take?
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> A challenge was identifying my goal clearly and then mapping out the specific skills needed to reach it. It was also difficult to assess which skills I already possessed and which ones I still need to develop. Additionally, finding a relevant job or position that would serve as a stepping stone and considering other steps I could take to advance my career required careful reflection and research.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned how to break down my career aspirations into clear, manageable steps. This process helped me identify the skills I need to develop and highlighted the importance of continuous learning. It also showed me how to align my current skills with potential career opportunities and plan my next steps effectively.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="assets/pdfs/Latinne_Lorenzo_careercompas.pdf" target="_blank">Link to the PDF-file</a>
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="assets/images/career-compass-image.png" alt="Career compass image">
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                C# project: Mastermind - 15/12/2024
+            </p>
+            <div class="project-content">
+                <div class="project-image">
+                    <img src="assets/images/mastermind-image.png" alt="C# Project">
+                </div>
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task involved developing a Mastermind game using C# and XAML. The game generates a random 4-color code, and the player has to guess the correct code within 10 attempts. I had to build the app's logic, interface, and ensure the code follows specific technical and functional requirements.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> The challenge was working with C# to handle the game logic, generating random codes, and validating user input. Additionally, creating an intuitive UI using XAML required careful planning of layout and design elements.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned how to implement game logic, handle user input, and design a functional UI. This project enhanced my skills in C# and XAML, along with working with random number generation and event handling in a gaming context.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="https://github.com/PXL-WPL1-2425/c-project-mastermind-3-LorenzoLatinnePXL" target="_blank">Link to the GitHub repo</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="project white-rounded-background">
+            <p class="project-title">
+                Web Project: CV - 22/12/2024
+            </p>
+            <div class="project-content">
+                <div class="project-description">
+                    <p>
+                        <span class="bold">Task description:</span> The task is to create a CV website in two stages: a desktop version and a responsive version. It includes personal details, skills, education, and work experience. The website must be responsive, adapting to different screen sizes using CSS and media queries, without external CSS libraries.
+                    </p>
+                    <p>
+                        <span class="bold">Personal challenges:</span> A key challenge was determining the personal branding and layout of the website. Ensuring the design reflected a professional image while also making it responsive across devices added complexity, alongside sticking to guidelines like avoiding external libraries.
+                    </p>
+                    <p>
+                        <span class="bold">What I learned:</span> I learned how to design a simple yet responsive website, focusing on clean CSS and media queries, while ensuring the layout reflects a personal brand and is effective on all devices.
+                    </p>
+                    <p class="link-to-project">
+                        <a href="https://github.com/LorenzoLatinnePXL/CV-LorenzoLatinne-1PROA" target="_blank">Link to the GitHub repo</a>
+                    </p>
+                </div>
+                <div class="project-image">
+                    <img src="assets/images/cv-image.png" alt="Web Project CV">
                 </div>
             </div>
         </div>
     </section>
+    <section id="reflection" class="reflection">
+        <h3>Reflection</h3>
+        <div class="aim-reflection-project">
+            <p class="emphasize1 bold center">
+                AIM-reflection on Web Project: CV.
+            </p>
+            <p>
+                Throughout my Web Project: CV, I’ve developed a lot of core qualities like perseverance, adaptability, and a strong willingness to learn. I faced challenges, especially around sticking to a design and adapting the website to be mobile-responsive, but I pushed through and learned a great deal in the process. One of the biggest lessons I took away is the importance of planning ahead rather than diving straight into things. Early on, I didn’t fully follow the project’s requirements, which led to me overcomplicating the design at times. However, I was able to adjust and refocus, and in the end, I’m proud of the website I created.
+            </p>
+            <p>
+                Working solo on this project gave me complete creative freedom, which I appreciated, but it also meant I didn’t get external feedback, something I may consider in the future. While I initially struggled with the limitations of using only HTML and CSS, I ultimately learned that I could do a lot more with these tools than I thought. The process made me more confident in building static webpages, and I know I could create something similar much faster now.
+            </p>
+            <p>
+                Looking back, I see that I could’ve saved time by making decisions about fonts, colors, and images earlier on, instead of focusing so much on the layout first. This would’ve helped me streamline the design process. I also learned how essential it is to have a responsive design, so I focused on using media queries and flexbox containers to ensure the website was user-friendly on mobile devices. I even removed background images that weren’t fitting well on smaller screens, which was a good move for improving the experience across different devices.
+            </p>
+            <p>
+                Overall, I’m happy with my progress, and I feel much more confident in my ability to build websites. This project has taught me the value of balancing creativity with practical requirements, as well as the importance of planning ahead to save time and avoid unnecessary setbacks. Going forward, I plan to use these insights in my future projects, knowing that a well-thought-out design can make a big difference.
+            </p>
+        </div>
+        <div class="aim-reflection-pop">
+            <p class="emphasize1 bold center">
+                POP planning and organisation
+            </p>
+            <p class="emphasize4 bold">
+                What did you learn during this POP session?
+            </p>
+            <p>
+                During this POP session, I gained a deeper understanding of the importance of structured planning to effectively balance learning, work, and personal responsibilities. The detailed schedule highlighted the significance of focused study periods, such as working on "C# Essentials" and "Data Essentials," alongside time allocated for rest and everyday activities. This thoughtful structure is essential for maintaining long-term productivity and developing expertise.
+            </p>
+            <p class="emphasize4 bold">
+                How can you implement the learning material from this session in your daily life as a programmer?
+            </p>
+            <p>
+                In my daily life as a programmer, I can apply this approach by creating a similarly time-blocked schedule. For example, I could dedicate specific hours to learning new programming languages, revisiting foundational knowledge, and tackling coding challenges while also setting aside time for relaxation and reflection. Adopting such disciplined planning will enhance my focus and help prevent burnout, ultimately improving my learning progress and professional performance.
+            </p>
+            <p>
+            </p>
+        </div>
+        <div class="x-factor">
+            <p class="emphasize1 bold center">
+                X-Factor
+            </p>
+            <p class="emphasize4 bold">
+                (Em)passion
+            </p>
+            <p>
+                I've always been passionate about technology and computers. It's with great admiration that I've looked at artistic websites and video games and I always aspired to some day be able to create my own technological pieces of art. I've started this formal education with the goal to not only learn but to grow as a developer. Not just on the technical side of things but the creative as well. Working with peers on a project and therefore a common goal is a great perspective I look forward to in my future career.
+            </p>
+            <p class="emphasize4 bold">
+                Entrepreneurial and innovative
+            </p>
+            <p>
+                Growing up in a family of entrepreneurs, it's inevitable that I've grown fond of the idea of being responsible for my own company. Throughout the years, it's not so much the need to actually own a company of myself, but to have the responsibility to be able to do things that matter. I see myself, today still, starting a company one day, but it's especially that mentality of wanting to be a part of something bigger that drives me to do what I do every day. I want to be a part of something that matters, that is innovative and above all, something I am responsible for.
+            </p>
+            <p class="emphasize4 bold">
+                (International) Collaboration
+            </p>
+            <p>
+                I believe limiting one self is to block one to ever reach their full potential. Knowledge does not stop at any country borders. We live in a day and age where enormous amounts of knowledge is at our fingertips thanks to the internet. I regularly visit community websites and learning pages to see what peers with similar interest are up to and how I can improve myself. As stated above, working with people with similar interest towards a common goal is what creates opportunities to create truly worthwhile projects. It's also with the help of this community that I even applied and started with this formal education in the first place, and I'm very glad I did.
+            </p>
+            <p class="emphasize4 bold">
+                Multi- & disciplinary
+            </p>
+            <p>
+                The field of IT is embedded in all kinds of different sectors. It's unthinkable to not have a website or rely on software applications to run a business. This fact will allow me to meet and work with a lot of people. This education already has shed a light about how my future will unfold, and I can't wait to start working in IT.
+            </p>
+        </div>
+    </section>
 </main>
+<footer>
+    <div class="footer-content">
+        <div class="footer-left">
+            <p><span class="calligraphy">Lorenzo Latinne</span> - 1PROa</p>
+        </div>
+        <div class="footer-middle">
+            <p>Assignment Portfolio</p>
+        </div>
+        <div class="footer-right">
+            <a href="#top-of-page">
+                <p>Back to top</p>
+                <img src="assets/images/arrow-up.png" alt="">
+            </a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
